# pyaddressbook

./: README.md  db.sqlite  pyproject.toml
pyaddressbook/: main.py  middleware.py
pyaddressbook/api/: addressbook.py
pyaddressbook/models/: __init__.py  _contact.py
pyaddressbook/repository/: addressbook.py
pyaddressbook/tests/api/: test_addressbook.py
