[tool.poetry]
name = "pyaddressbook"
version = "0.1.0"
description = "Example address book API using FastAPI and SQLAlchemy"
authors = ["Alan <alan@gangleri.net>"]
readme = "README.md"

[tool.poetry.scripts]
pyphonebookapi = "pyaddressbook.main:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
sqlalchemy = "^1.4.46"
uvicorn = "^0.20.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

